--- a/SwiftyAppLock/Views/AppLockView.xib
+++ b/SwiftyAppLock/Views/AppLockView.xib
@@ -10,17 +10,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AppLockView" customModule="Resources" customModuleProvider="target">
-            <connections>
-                <outlet property="containerView" destination="s0x-wh-MHy" id="RX2-BE-lvL"/>
-                <outlet property="instructionsLabel" destination="hYs-9n-iNy" id="pIq-bG-Yi4"/>
-                <outlet property="negativeButton" destination="JI1-Cw-vXa" id="5Fv-fY-NGa"/>
-                <outlet property="pinView" destination="f6n-ET-6L1" id="NQf-P3-OEi"/>
-                <outlet property="positiveButton" destination="cvU-wP-Mdu" id="I0E-fX-aoz"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view opaque="NO" contentMode="scaleToFill" id="iN0-l3-epB" customClass="AppLockView" customModule="Resources" customModuleProvider="target">
+        <view opaque="NO" contentMode="scaleToFill" id="iN0-l3-epB" customClass="AppLockView" customModule="SwiftyAppLock" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -31,7 +23,7 @@
                             <rect key="frame" x="150" y="163.5" width="150" height="43"/>
                             <state key="normal" title="Submit"/>
                             <connections>
-                                <action selector="positiveButtonTapped" destination="-1" eventType="touchUpInside" id="4an-Vq-R6o"/>
+                                <action selector="positiveButtonTapped" destination="iN0-l3-epB" eventType="touchUpInside" id="qXS-4v-A7E"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JI1-Cw-vXa">
@@ -40,7 +32,7 @@
                                 <color key="titleColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
                             <connections>
-                                <action selector="negativeButtonTapped" destination="-1" eventType="touchUpInside" id="5Ho-Wy-2or"/>
+                                <action selector="negativeButtonTapped" destination="iN0-l3-epB" eventType="touchUpInside" id="dp6-Ty-r5b"/>
                             </connections>
                         </button>
                     </subviews>
@@ -61,7 +53,7 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f6n-ET-6L1" customClass="PINView" customModule="Resources" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f6n-ET-6L1" customClass="PINView" customModule="SwiftyAppLock" customModuleProvider="target">
                     <rect key="frame" x="51.5" y="180" width="271" height="66.5"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
@@ -81,6 +73,13 @@
                 <constraint firstItem="f6n-ET-6L1" firstAttribute="top" secondItem="hYs-9n-iNy" secondAttribute="bottom" constant="24" id="uxW-PL-t5J"/>
                 <constraint firstItem="s0x-wh-MHy" firstAttribute="top" secondItem="hYs-9n-iNy" secondAttribute="bottom" constant="-41" id="zpN-ST-2eO"/>
             </constraints>
+            <connections>
+                <outlet property="containerView" destination="s0x-wh-MHy" id="F6c-sN-ipg"/>
+                <outlet property="instructionsLabel" destination="hYs-9n-iNy" id="Pn6-l1-vaF"/>
+                <outlet property="negativeButton" destination="JI1-Cw-vXa" id="hUP-gC-ZKB"/>
+                <outlet property="pinView" destination="f6n-ET-6L1" id="6oN-U8-hlI"/>
+                <outlet property="positiveButton" destination="cvU-wP-Mdu" id="mr3-kM-DeJ"/>
+            </connections>
             <point key="canvasLocation" x="33.5" y="54.5"/>
         </view>
     </objects>
